--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -309,11 +309,11 @@
     }
 
     .logo-main {
-        font-size: 1.1rem;
+        font-size: 1.25rem;
     }
 
     .logo-img {
-        height: 40px;
+        height: 50px;
     }
 
     .nav-menu {
